stateDiagram-v2
  [*] --> RECIBIDO : JSON validado
  RECIBIDO --> FIRMADO : UBL + XSD + XML-DSig OK
  RECIBIDO --> INVALIDO : falla validación de dominio/XSD

  FIRMADO --> ENVIADO : sendBill / sendSummary / POST REST aceptado
  FIRMADO --> ERROR_ENVIO : SOAPFault 0100-1999, timeout, red, HTTP 5xx
  FIRMADO --> PENDIENTE_AGRUPACION : boleta o nota B (espera RC)

  PENDIENTE_AGRUPACION --> ENVIADO : incluida en RC enviado
  ERROR_ENVIO --> ENVIADO : reintento OK
  ERROR_ENVIO --> ERROR_ENVIO : reintento falla (backoff)

  ENVIADO --> ACEPTADO : CDR 0
  ENVIADO --> ACEPTADO_CON_OBS : CDR 0 + notas 4xxx
  ENVIADO --> RECHAZADO : CDR 2xxx-3xxx  (numeración consumida en 01/07/08-F)
  ENVIADO --> ERROR_ENVIO : getStatus 99 sin CDR / ticket perdido
  ENVIADO --> PENDIENTE_AGRUPACION : RC rechazado (boletas vuelven a esperar)

  ACEPTADO --> ANULADO : RA aceptada (serie F) / RC condición 3 aceptado (serie B)
  ACEPTADO_CON_OBS --> ANULADO

  INVALIDO --> [*]
  RECHAZADO --> [*]
  ANULADO --> [*]
